criando variáveis e padrões

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./scss/main.css">
 </head>
 <body>
-    
+    <div class="container">
+        <button class="btn">Realizar pré-cadastro</button>
+    </div>
 </body>
 </html>
