adicionando s-hero no desktop

--- a/index.html
+++ b/index.html
@@ -45,5 +45,56 @@
         </div>
         <div class="border">
     </header>
+
+    <section class="s-hero">
+        <div class="container">
+            <div class="left-content">
+                <div class="text">
+                    <h1>Curso completo em design de produto digital</h1>
+                    <div class="yellow-border"></div>
+                    <img src="./img/star-icon.svg" alt="Ícone de estrela" class="star">
+                    <p>
+                        O programa Môre Educação irá trazer novos conhecimento através de aulas teóricas e práticas focado no processo de 
+                        <b>Design Centrado no Usuário</b>
+                    </p>
+                </div>
+
+                <div class="input">
+                    <input type="text" placeholder="Insira seu e-mail">
+                    <button class="btn">Realizar pré-cadastro</button>
+                </div>
+
+                <div class="brands">
+                    <ul>
+                        <li>
+                            <img src="./img/rede-logo.svg" alt="Logo rede">
+                        </li>
+                        <li>
+                            <img src="./img/itau-logo.svg" alt="Logo itau">
+                        </li>
+                        <li>
+                            <img src="./img/smile-logo.svg" alt="Logo smiles">
+                        </li>
+                        <li>
+                            <img src="./img/marisa-logo.svg" alt="Logo marisa">
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="reviews">
+                    <img src="./img/people-review.png" alt="Imagens de usuários">
+                    
+                    <div class="grade-review">
+                        <img src="./img/review-icon.svg" alt="Ícone de estrela">
+                        <span><b>4.9</b> (review)</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="rigth-content">
+                <img src="./img/illustration.png" alt="Ilustração">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
