--- a/index.html
+++ b/index.html
@@ -92,9 +92,49 @@
             </div>
 
             <div class="rigth-content">
-                <img src="./img/illustration.png" alt="Ilustração">
+                <img src="./img/illustration.png" alt="Ilustração" class="ilustra">
             </div>
         </div>
     </section>
+
+    <div class="s-benefits">
+        <div class="container">
+            <div class="cards">
+                <div class="card">
+                    <div class="info">
+                        <img src="./img/triangle-icon.svg" alt="Ícone" class="image">
+
+                        <div class="text">
+                            <h2>18 módulos</h2>
+                            <span>Trilha de design e gestão de produtos</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="info">
+                        <img src="./img/square-icon.svg" alt="Ícone" class="image">
+
+                        <div class="text">
+                            <h2>Aulas online e ao vivo</h2>
+                            <span>Terças e quintas às 19h</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="info">
+                        <img src="./img/layers-icon.svg" alt="Ícone" class="image">
+
+                        <div class="text">
+                            <h2>Projetos reais na prática</h2>
+                            <span>Trilha de design e gestão de produtos</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="white-board"></div>
+    </div>
 </body>
 </html>
