--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
 
-            <div class="rigth-content">
+            <div class="right-content">
                 <img src="./img/illustration.png" alt="Ilustração" class="ilustra">
             </div>
         </div>
